# Face-identification

./: CMakeLists.txt  input_face.cpp  input_face.h  input_face.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_camera.h
icon/: res.qrc
include/: findKeyPoints.h
src/: findKeyPoints.cpp
